--- a/sections/main-collection.liquid
+++ b/sections/main-collection.liquid
@@ -76,7 +76,7 @@
           {%- else -%}
             <div class="collection__results">
               {%- render 'active-facets', source: collection, hash: "#collection" -%}
-              {%- render 'product-list', products: collection.products, allow_highlight: true, paginate: paginate, blocks: section.blocks, output_override_attributes: true, show_variants_as_separate_cards: section.settings.show_variants_as_separate_cards, cards_per_page: section.settings.cards_per_page, specific_colors_to_show: section.settings.specific_colors_to_show, show_swatches_with_variant_cards: section.settings.show_swatches_with_variant_cards -%}
+              {%- render 'product-list', products: collection.products, allow_highlight: true, paginate: paginate, blocks: section.blocks, output_override_attributes: true, show_variants_as_separate_cards: section.settings.show_variants_as_separate_cards, cards_per_page: section.settings.cards_per_page, specific_colors_to_show: section.settings.specific_colors_to_show, show_swatches_with_variant_cards: section.settings.show_swatches_with_variant_cards, hide_out_of_stock_variants: section.settings.hide_out_of_stock_variants -%}
             </div>
 
             {%- render 'pagination', paginate: paginate, facet: true, hash: '#collection' -%}
@@ -200,6 +200,13 @@ on desktop based on the settings
       "id": "show_swatches_with_variant_cards",
       "label": "Show color swatches under variant cards",
       "info": "When enabled, color swatches will be displayed under each product card even in variant mode, allowing customers to quickly switch between colors.",
+      "default": false
+    },
+    {
+      "type": "checkbox",
+      "id": "hide_out_of_stock_variants",
+      "label": "Hide out of stock variant cards",
+      "info": "When enabled, variant cards that are completely out of stock will be hidden from the collection page.",
       "default": false
     },
     {
